# GMS-PI27

./: LICENSE.txt  README.md
cpp/: CMakeLists.txt  build-wasm.sh
cpp/gms/interop/: CMakeLists.txt  sonar-project.properties
cpp/gms/interop/src/beamprovider/: BeamOrchestrator.cpp  BeamOrchestrator.hh  BeamProvider.cpp  BeamProvider.hh  BeamSummationType.hh  BeamType.hh
cpp/gms/interop/src/common/: AmplitudeMeasurementValue.hh  ArrivalTimeMeasurementValue.hh  BaseVersionReference.hh  Channel.hh  ChannelSegment.hh  ChannelSegmentDescriptor.hh  ChannelSegmentFaceted.hh  ChannelVersionReference.hh  DepthRestraintReason.hh  DoubleValue.hh  DurationMeasurementValue.hh  DurationValue.hh  Ellipse.hh  Ellipsoid.hh  EnumeratedMeasurementValue.hh  EnumerationType.hh  EventHypothesis.hh  EventHypothesisId.hh  EventLocation.hh  FeatureMeasurement.hh  FeatureMeasurementType.hh  FeatureMeasurementWrapper.hh  FeaturePrediction.hh  FeaturePredictionComponent.hh  FeaturePredictionComponentType.hh  FeaturePredictionDerivativeMap.hh  FeaturePredictionDerivativeType.hh  FilterDefinitionUsage.hh  InstantValue.hh  Location.cpp  Location.hh  LocationBehavior.hh  LocationRestraint.hh  LocationSolution.hh  LocationUncertainty.hh  MagnitudeModel.hh  MagnitudeType.hh  Map.hh  NetworkMagnitudeBehavior.hh  NetworkMagnitudeSolution.hh  (+38 more)
cpp/gms/interop/src/filterprovider/: FilterDesigner.cpp  FilterDesigner.hh  FilterProvider.cpp  FilterProvider.hh  enums.hh
cpp/gms/interop/src/fkprovider/: FkAttributes.hh  FkComputeException.hh  FkComputeUtility.cpp  FkComputeUtility.hh  FkFrequencyRange.hh  FkSpectra.hh  FkSpectraDefinition.hh  FkSpectraMetadata.hh  FkSpectraParameters.hh  FkSpectrum.hh  FkSpectrumWindow.hh  FkTimeseriesWithMissingInputChannels.hh  FkUncertaintyOption.hh  FkWaveformSampleRate.hh  GmsFkProvider.hh  SlownessGrid.hh
cpp/gms/interop/src/rotationprovider/: RotationDefinition.hh  RotationDescription.hh  RotationParameters.hh  RotationProvider.cpp  RotationProvider.hh
cpp/gms/interop/src/utils/: CStructToClassConverter.cpp  CStructToClassConverter.hh  ClassToCStructConverter.cpp  ClassToCStructConverter.hh  DataAlignmentUtility.cpp  DataAlignmentUtility.hh  ProcessingMaskUtility.cpp  ProcessingMaskUtility.hh
cpp/gms/interop/src/wasm/: ArrayConverter.cpp  ArrayConverter.hh  CommonInterop.cpp  CommonInterop.hh
cpp/gms/interop/test/: CMakeLists.txt
cpp/gms/interop/test/beamprovider/: BeamOrchestratorTest.cpp  BeamOrchestratorTest.hh  BeamProviderTest.cpp  BeamProviderTest.hh  DefaultBeamProviderTest.cpp  DefaultBeamProviderTest.hh
cpp/gms/interop/test/common/: CoiBuilderTests.cpp  CoiBuilderTests.hh  CoiConstructorTests.cpp  CoiConstructorTests.hh  LocationTests.cpp  LocationTests.hh  MapTests.cpp  MapTests.hh  OrientationAnglesTest.cpp  OrientationAnglesTests.hh
cpp/gms/interop/test/filterprovider/: BaseFilterApplyTests.cpp  BaseFilterApplyTests.hh  FilterDesignerTests.hh  FilterProviderTests.cpp  FilterProviderTests.hh  FilterTestUtils.cpp  FilterTestUtils.hh  TaperTests.cpp  TaperTests.hh  WasmFilterApplyTests.cpp  WasmFilterApplyTests.hh  WasmFilterDesignerTests.cpp  WasmFilterDesignerTests.hh
cpp/gms/interop/test/fkprovider/: FkComputeUtilityTest.cpp  FkComputeUtilityTest.hh
cpp/gms/interop/test/rotationprovider/: RotationConstructorTests.cpp  RotationConstructorTests.hh  RotationProcessingMaskTests.cpp  RotationProcessingMaskTests.hh  RotationProviderTests.cpp  RotationProviderTests.hh
cpp/gms/interop/test/utils/: ClassToCStructConverterTests.cpp  ClassToCStructConverterTests.hh  DataAlignmentUtilityTests.cpp  DataAlignmentUtilityTests.hh  ProcessingMaskUtilityTests.cpp  ProcessingMaskUtilityTests.hh
cpp/gms/sigpro/: CMakeLists.txt  sonar-project.properties
cpp/gms/sigpro/src/beam/: beam.c  beam.h  enums.h  structs.h
cpp/gms/sigpro/src/common/: enums.h  fft.c  fft.h  missingInputChannels.c  missingInputChannels.h  structs.h  taper.c  taper.h  utils.c  utils.h  vectorMath.c  vectorMath.h
cpp/gms/sigpro/src/filter/: enums.h  filter.c  filter.h  filter_iir.h  structs.h
cpp/gms/sigpro/src/fk/: enums.h  fk.c  fk.h  structs.h
cpp/gms/sigpro/src/qc/: qc.c  qc.h
cpp/gms/sigpro/src/rotation/: rotation.c  rotation.h
cpp/gms/sigpro/test/: CMakeLists.txt
cpp/gms/sigpro/test/beam/: BeamMissingInputsTest.cpp  BeamMissingInputsTest.hh  BeamValidationTest.cpp  BeamValidationTest.hh
cpp/gms/sigpro/test/common/: FftForwardTest.cpp  FftForwardTest.hh  MissingInputChannelsTest.cpp  MissingInputChannelsTest.hh  TaperTest.cpp  TaperTest.hh  TaperUtilityChannelSegmentTest.cpp  TaperUtilityChannelSegmentTest.hh  TaperUtilityEndpointTest.cpp  TaperUtilityEndpointTest.hh  TaperUtilityTest.cpp  TaperUtilityTest.hh  VectorMathTest.cpp  VectorMathTest.hh
cpp/gms/sigpro/test/filter/: FilterApplyTest.cpp  FilterApplyTest.hh  FilterDesignTest.cpp  FilterDesignTest.hh  FilterTestUtils.cpp  FilterTestUtils.hh  GroupDelayTest.cpp  GroupDelayTest.hh  IirButterworthFilterApplyTest.cpp  IirButterworthFilterApplyTest.hh  IirButterworthFilterDesignTest.cpp  IirButterworthFilterDesignTest.hh
cpp/gms/sigpro/test/fk/: DefaultFkTest.cpp  DefaultFkTest.hh
cpp/gms/sigpro/test/qc/: QcChannelSegmentTest.cpp  QcChannelSegmentTest.hh  QcDemeanTest.cpp  QcDemeanTest.hh  QcMeanTest.cpp  QcMeanTest.hh
cpp/gms/sigpro/test/rotation/: RotationTests.cpp  RotationTests.hh
cpp/gms/testUtils/: CMakeLists.txt
cpp/gms/testUtils/src/: Comparisons.cpp  Comparisons.hh  DataGenerator.cpp  DataGenerator.hh  FileLoader.cpp  FileLoader.hh
cpp/gms/testUtils/src/data/: TestFileLoader.cpp  TestFileLoader.hh  beamMissingInputsData.json  blackmanTaperData.json  cosineTaperData0.25To0.75.json  cosineTaperData0.75To3.0.json  cosineTaperData2.0To3.0.json  endOverlapTaperUtilityTest.json  fullyContainedTaperUtilityTest.json  hammingTaperData.json  hanningTaperData.json  parzenTaperData.json  rotation-test-waveform-result.json  rotation-test-waveform.json  threeMaskTaperUtilityTest.json  (+3 more)
cpp/gms/testUtils/test/: CMakeLists.txt  DataGeneratorTests.cpp  DataGeneratorTests.hh
cpp/gms/ui-wasm-provider/: CMakeLists.txt
(+1702 files in other folders)
